# rdf-solution-workspace

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  rdf-solution-workspace.code-workspace  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
contracts/: README.md
contracts/competency-questions/: cq-01-people.rq  cq-02-top-products.rq  cq-03-order-totals.rq  cq-registry.yaml
contracts/ontology/: core.ttl
contracts/sample-data/: sample.ttl
contracts/shapes/: core.shacl.ttl
docs/: architecture.md  publish-github-hf-spaces.md
examples/: questions.txt  unstructured-retail-order.txt
extraction/: pyproject.toml
extraction/src/extraction_pipeline/: __init__.py  cli.py  llm_adapter.py  pipeline.py
extraction/tests/: test_pipeline.py
platform/: README.md
qa/: pyproject.toml
qa/src/qa_service/: main.py  sparql.py  verbalizer.py
qa/tests/: test_health.py  test_sparql.py  test_verbalizer.py
scripts/: demo-fuseki.ps1  demo.ps1  load-sample.ps1  reset-graph-store.ps1  setup.ps1  verify-graph.ps1
validation/: pyproject.toml
validation/src/validation_gate/: __init__.py  cli.py  infer.py  promote.py  validator.py
validation/tests/: test_infer.py  test_pipeline_integration.py  test_validator.py
